Updated the client according to the API definitions for 0.9.92
