# cdp-sdk-go/resources/swagger/datalake.yaml
@@ -6,7 +6,7 @@ x-form-factors: public
 x-cdp-releases: PUBLIC
 x-audit: true
 info:
-  version: 0.9.87 (BETA)
+  version: 0.9.91 (BETA)
   title: Cloudera Datalake Service
   license:
     name: Apache 2.0
@@ -1062,6 +1062,11 @@ definitions:
         items:
           $ref: '#/definitions/Instance'
         description: List of instances in this instance group.
+      availabilityZones:
+        type: array
+        items:
+          type: string
+        description: List of availability zones that this instance group is associated with.
   Instance:
     type: object
     description: Object which holds some details of an instance for the given cluster.
@@ -1094,12 +1099,32 @@ definitions:
         type: integer
         format: int32
         description: The SSH port for the instance.
+      clouderaManagerServer:
+        type: boolean
+        description: Whether the instance has Cloudera Manager deployed or not.
       instanceGroup:
         type: string
         description: The name of the instance group this instance belongs to.
       instanceTypeVal:
         $ref: '#/definitions/DatalakeInstanceType'
         description: The instance type.
+      attachedVolumes:
+        type: array
+        description: List of volumes attached to this instance.
+        items:
+          $ref: '#/definitions/AttachedVolumeDetail'
+      availabilityZone:
+        type: string
+        description: The availability zone of the instance.
+      instanceVmType:
+        type: string
+        description: The VM type of the instance. Supported values depend on the cloud platform.
+      rackId:
+        type: string
+        description: The rack ID of the instance in Cloudera Manager.
+      subnetId:
+        type: string
+        description: The subnet ID of the instance.
   DatalakeInstanceStatus:
     type: string
     description: The status of the instance.
@@ -1126,6 +1151,21 @@ definitions:
       - GATEWAY
       - GATEWAY_PRIMARY
       - CORE
+  AttachedVolumeDetail:
+    type: object
+    description: The attached volume configuration.
+    properties:
+      count:
+        type: integer
+        format: int32
+        description: The number of volumes.
+      volumeType:
+        type: string
+        description: The type of volumes.
+      size:
+        type: integer
+        format: int32
+        description: The size of each volume in GB.
   Endpoints:
     type: object
     description: Object which holds the exposed endpoints for the given cluster.
@@ -2304,6 +2344,9 @@ definitions:
       skipDatahubValidation:
         type: boolean
         description: With this option, the Data Lake upgrade can be performed with running Data Hub clusters. This option may cause problems on the running Data Hub clusters during the Data Lake upgrade.
+      skipBackupValidation:
+        type: boolean
+        description: Skips the validation steps that run prior to the backup. Redundant if --skip-backup is included. If this option is not provided, the validations are performed by default.
       rollingUpgradeEnabled:
         type: boolean
         description: Enables the ability to perform rolling runtime upgrade.
